# az-html-preprocessor

./: Cargo.toml  rustfmt.toml
az-lib/: Cargo.toml
az-lib/resources/test/parser/: footnotes.az  footnotes.html  highlight.az  highlight.html  script.az  script.html  template.az  template.html
az-lib/src/: footnote.rs  highlighting.rs  lib.rs  metadata.rs  parser.rs  template.rs
az-lib/src/parser/: footnote.rs  highlighting.rs
