[package]
name = "az-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
html-escape = "0.2.13"
htmlparser = "0.2.1"
itertools = "0.14.0"
slotmap = "1.0.7"
tree-sitter = "0.25.3"
tree-sitter-highlight = "0.25.3"

[dev-dependencies]
pretty_assertions = "1.4.1"
test_each_file = "0.3.4"
tree-sitter-rust = "0.24.0"
